# PCA

./: .gitignore  CMakeLists.txt
src/: grapher.py  pca.h  pca_test.cpp
